overflow-fixedinmain

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+
+
 .navi {
     display: flex;
     justify-content: center;
@@ -111,6 +113,8 @@
     background-color: black;
     height: 90vh;
     justify-content: center;
+    overflow: hidden;
+
     /* align-items: center; */
     color: white;
     align-items: center;
